# jac-interactive-learning-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  ADD_USERS.sh  ADMIN_ACCESS_FIX_COMPLETE.md  ADMIN_FIX_APPLIED.md  ADMIN_FIX_COMPLETE.md  ADMIN_INTERFACES_VERIFICATION_REPORT.md  ADMIN_INTERFACE_GUIDE.md  ADMIN_PERMISSIONS_FIX.md  ADVANCED_ANALYTICS_ENGINE_COMPLETE_VERIFICATION.md  AGENTS_SYSTEM_VERIFICATION_REPORT.md  AI_AGENTS_ENHANCEMENT_COMPLETION_REPORT.md  AI_AGENTS_IMPLEMENTATION_REPORT.md  ANALYZE_PERMISSION_ISSUE.sh  API_ENDPOINTS_SUMMARY.md  APPLY_FIX_AND_TEST.sh  APPLY_MODEL_FIXES.sh  ASSESSMENTS_IMPLEMENTATION_REPORT.md  ASSESSMENT_FRONTEND_BACKEND_INTEGRATION.md  ASSESSMENT_INTEGRATION_COMPLETE.md  ASSESSMENT_PAGES_VERIFICATION_REPORT.md  ASSESSMENT_SYSTEM_FIX_REPORT.md  AUTHENTICATION_FIX_REPORT.md  AUTHENTICATION_SERVICE_UPDATE.md  AUTH_COMPONENTS_VERIFICATION_REPORT.md  AssessmentSystemFixesReport.md  AssessmentSystemImplementationReport.md  BACKEND_API_SPECIFICATION.md  BACKEND_FRONTEND_INTEGRATION_GUIDE.md  BACKEND_IMPLEMENTATION_PRIORITY.md  BACKEND_INTEGRATION_COMPLETION.md  BUILD_CHALLENGES_DOCUMENTATION.md  CAPABILITY_ENHANCEMENT_REPORT.json  CHALLENGES_AND_WORKAROUNDS.md  CHECK_ADMIN_URLS.sh  CHECK_STATUS.sh  COLLABORATION_IMPLEMENTATION_COMPLETE.md  COMPLETE_ADMIN_STATIC_FIX.sh  COMPLETE_DJANGO_APPS_IMPLEMENTATION_FINAL.md  (+453 more)
backend/: Dockerfile  Dockerfile.celery-beat  Dockerfile.celery-worker  Dockerfile.jac-sandbox  README.md  admin_diagnostic.py  auto_migrate_fix.py  backup_manager.py  clean_commit_history.sh  cleanup_steps.sh  complete_migration_fix.py  curriculum_log.txt  db.sqlite3  direct_db_fix.py  entrypoint.sh  execute_cleanup.sh  execute_curriculum.py  fix_migration_history.py  fix_migration_interactive.py  fix_migration_issue.py  fix_migrations.py  fix_user_registration.py  jac_sandbox_server.py  manage.py  populate_curriculum.py  pre_migration_hook.py  test_apis.py  (+14 more)
(+412 files in other folders)
